# comfyui-liveportrait

./: README.md  __init__.py  pyproject.toml  requirements.txt
example/: appinfo-workflow.json  expression_workflow.json  live_workflow.json  mul-workflow.json  v2v-workflow.json  全家福模式-workflow.json
nodes/: expression_editor.py  live_portrait.py
nodes/LivePortrait/: deviceutils.py  inference.py  speed.py  video2template.py
nodes/LivePortrait/src/: live_portrait_pipeline.py  live_portrait_wrapper.py  template_maker.py
nodes/LivePortrait/src/config/: argument_config.py
nodes/LivePortrait/src/modules/: dense_motion.py
nodes/LivePortrait/src/utils/: cropper.py  helper.py  landmark_runner.py  retargeting_utils.py
