[project]
name = "comfyui-liveportrait"
description = "The ComfyUI version of [a/LivePortrait](https://github.com/KwaiVGI/LivePortrait)."
version = "1.0.1"
license = "LICENSE"
dependencies = ["numpy>=1.26.4", "opencv-python-headless", "imageio>=2.34.2", "lmdb>=1.4.1", "timm>=1.0.7", "rich>=13.7.1", "ffmpeg>=1.4", "onnxruntime-gpu>=1.18.0", "onnx>=1.16.1", "scikit-image>=0.24.0", "albumentations>=1.4.10", "matplotlib>=3.9.0", "imageio-ffmpeg>=0.5.1"]

[project.urls]
Repository = "https://github.com/shadowcz007/comfyui-liveportrait"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shadowcz"
DisplayName = "comfyui-liveportrait"
Icon = ""
